# ChatGPT2Obsidian

./: .gitignore  PROJECT.md  README.md  app.py  main.py  pyproject.toml
implementations/qwen/: .gitignore  README.md  main.py  pyproject.toml
implementations/qwen/src/: __init__.py  cli.py  exporter.py  markdown_writer.py  models.py  parser.py
implementations/qwen/tests/: test_parser.py
src/chatgpt2obsidian/: markdown_writer.py  models.py  parser.py
src/chatgpt2obsidian/ui/: __init__.py  chat_view.py  main_window.py  navigation_tree.py
